# LED_light

led/: partitions.csv  sdkconfig  sdkconfig.old
led/main/: CMakeLists.txt  app_driver.cpp  app_main.cpp  app_priv.h
